# angle-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
angle_parser/: __init__.py  parser.py
tests/: test_parser.py
