[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "angle-parser"
version = "0.2.0"
description = "An angle parsing module"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tim Molteno", email = "tim@elec.ac.nz"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/tmolteno/angle-parser"
Repository = "https://github.com/tmolteno/angle-parser"
